src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Alliances_Sales_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alliances Sales Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Whitepaper</fullName>
                </value>
                <value>
                    <fullName>On-Demand Webinar</fullName>
                </value>
                <value>
                    <fullName>Product Download</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Quarter__c</fullName>
        <description>Quarter in which campaign was run</description>
        <label>Budget Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Year_Quarter__c</fullName>
        <description>Budget year and quarter in which campaign and expense was run/incurred.</description>
        <formula>text(Budget_Year__c)  &amp;   text(Budget_Year__c)</formula>
        <label>Budget Year Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Year__c</fullName>
        <description>The budget year in which campaign was run and expense incurred.</description>
        <label>Budget Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFCR_Exclude_From_Campaign_Influence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked this record will be excluded from Full Circle Campaign Influence Calculations</description>
        <inlineHelpText>When checked this record will be excluded from Full Circle Campaign Influence Calculations</inlineHelpText>
        <label>Exclude From Campaign Influence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFCR_FCCRM_Campaign_Threshold__c</fullName>
        <description>Full Circle CRM Field. If used - this number is evaluated as part of the engagement threshold for a new campaign response. Negative values are supported to create responses that below the engagement threshold irrespective of the lead/contact engagement threshold.</description>
        <inlineHelpText>Full Circle CRM Field. If used - this number is evaluated as part of the engagement threshold for a new campaign response. Negative values are supported to create responses that below the engagement threshold irrespective of the lead/contact engagement th</inlineHelpText>
        <label>FCCRM Campaign Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Campaign Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Source_Category__c</fullName>
        <formula>IF(Name=&quot;Maintenance Renewal&quot;,&quot;Maintenance&quot;, 
CASE(LEFT(Name,4),  
&quot;CCL:&quot;, &quot;Cold Call List&quot;,
&quot;CHN:&quot;, &quot;Channel&quot;,
&quot;DIR:&quot;, &quot;Direct Marketing&quot;,
&quot;INB:&quot;, &quot;Inbound Marketing&quot;,
&quot;RFL:&quot;, &quot;Referral&quot;,
&quot;TSE:&quot;, &quot;Tradeshows &amp; Events&quot;,
&quot;SOM:&quot;, &quot;Social Media&quot;,
&quot;OEV:&quot;, &quot;Online Events&quot;,
&quot;TGL:&quot;, &quot;Targeted List&quot;,
&quot;PRO:&quot;, &quot;Prospecting&quot;,
&quot;3PT:&quot;, &quot;Third Party&quot;,
&quot;WEB:&quot;, &quot;Website&quot;,
&quot;OTH:&quot;, &quot;Other&quot;,
&quot;UNK:&quot;, &quot;Unknown&quot;,
&quot;RNL:&quot;, &quot;Renewal&quot;,
&quot;Unknown&quot;))</formula>
        <label>Campaign Source Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Sales_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Channel Owner</description>
        <label>Channel Sales Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City where event takes place</description>
        <inlineHelpText>City where event takes place</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Sales_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Commercial Team owner</description>
        <label>Commercial Sales Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Size_Targeting__c</fullName>
        <label>Company Size Targeting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-99</fullName>
                </value>
                <value>
                    <fullName>100-499</fullName>
                </value>
                <value>
                    <fullName>500-999</fullName>
                </value>
                <value>
                    <fullName>1000-4999</fullName>
                </value>
                <value>
                    <fullName>5000-9999</fullName>
                </value>
                <value>
                    <fullName>10000-24999</fullName>
                </value>
                <value>
                    <fullName>25000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concierge_Routing_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concierge Routing Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_per_Lead__c</fullName>
        <label>Cost per Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country2__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei Darussalam</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country where event takes place</description>
        <inlineHelpText>Country where event takes place</inlineHelpText>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Suppress_from_DiscoverOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to hide this Campaign from DiscoverOrg&apos;s Add/Update feature.</inlineHelpText>
        <label>Suppress from DiscoverOrg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disposition_Cost__c</fullName>
        <description>Cost of dispositioning this lead source. Typically ($2 / call) * (avg calls until resolution / lead).</description>
        <label>Disposition Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enterprise_Sales_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enterprise Team owner</description>
        <label>Enterprise Sales Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champion Dinner</fullName>
                </value>
                <value>
                    <fullName>CIO Summit</fullName>
                </value>
                <value>
                    <fullName>Cisco Marketing</fullName>
                </value>
                <value>
                    <fullName>CWOM Day</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Enablement</fullName>
                </value>
                <value>
                    <fullName>Executive Briefing Center</fullName>
                </value>
                <value>
                    <fullName>Executive Event</fullName>
                </value>
                <value>
                    <fullName>Field Event</fullName>
                </value>
                <value>
                    <fullName>Golf Outing</fullName>
                </value>
                <value>
                    <fullName>Group Activity</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>List Purchase</fullName>
                </value>
                <value>
                    <fullName>MSFT Town Hall</fullName>
                </value>
                <value>
                    <fullName>Paid Ads</fullName>
                </value>
                <value>
                    <fullName>Parent Campaign</fullName>
                </value>
                <value>
                    <fullName>Prospect Breakfast</fullName>
                </value>
                <value>
                    <fullName>Prospect Dinner</fullName>
                </value>
                <value>
                    <fullName>Prospect Lunch</fullName>
                </value>
                <value>
                    <fullName>Sales Kickoff</fullName>
                </value>
                <value>
                    <fullName>SPIFF/Incentive</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Sporting Event</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>User Group</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Owner__c</fullName>
        <description>Executive Sponsor for the event</description>
        <label>Executive Owner</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Attendance__c</fullName>
        <description>Expected number of event attendees</description>
        <inlineHelpText>Expected number of event attendees</inlineHelpText>
        <label>Expected Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geography_Targeting__c</fullName>
        <label>Geography Targeting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leads_Purchased__c</fullName>
        <label>Leads Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign_Safe_ID__c</fullName>
        <formula>CASESAFEID(Parent.Id)</formula>
        <label>Parent Campaign Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Account Record Type must be set to Partner</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Events</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Cost__c</fullName>
        <description>Cost of running the program.</description>
        <label>Program Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Geographical Region for Campaign grouping</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this campaign is eligible to be included for Inbound SLAs</inlineHelpText>
        <label>SLA Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scan_Goal__c</fullName>
        <description>Goal number of attendees scanned</description>
        <inlineHelpText>Goal number of attendees scanned</inlineHelpText>
        <label>Scan Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staff_Attended__c</fullName>
        <description>Staff attending event</description>
        <inlineHelpText>Staff attending event</inlineHelpText>
        <label>Staff Attended</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State2__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State where event takes place</description>
        <inlineHelpText>State where event takes place</inlineHelpText>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Attendance__c</fullName>
        <description>Attendance Goal</description>
        <label>Target Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Channel_Attendance__c</fullName>
        <description>Channel Attendance Goal</description>
        <label>Target Channel Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Commercial_Attendance__c</fullName>
        <description>Commercial Attendance Goal</description>
        <label>Target Commercial Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Enterprise_Attendance__c</fullName>
        <description>Enterprise Attendance Goal</description>
        <label>Target Enterprise Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Revenue__c</fullName>
        <description>Revenue Goal for Campaign</description>
        <label>Target Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Targeting__c</fullName>
        <label>Title Targeting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>C-suite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking_URL__c</fullName>
        <description>The tracking URL to append to inbound campaigns, e.g., ?utm_source=</description>
        <label>Tracking URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activate</fullName>
                </value>
                <value>
                    <fullName>Blue Whale Research</fullName>
                </value>
                <value>
                    <fullName>CBSi</fullName>
                </value>
                <value>
                    <fullName>CIO.com</fullName>
                </value>
                <value>
                    <fullName>Demand Works</fullName>
                </value>
                <value>
                    <fullName>eMedia</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Harte Hanks</fullName>
                </value>
                <value>
                    <fullName>IDG</fullName>
                </value>
                <value>
                    <fullName>IDG Connect</fullName>
                </value>
                <value>
                    <fullName>InboxInsight</fullName>
                </value>
                <value>
                    <fullName>Independent Blogger</fullName>
                </value>
                <value>
                    <fullName>InfoWorld</fullName>
                </value>
                <value>
                    <fullName>Integrate Marketplace</fullName>
                </value>
                <value>
                    <fullName>IT Central Station</fullName>
                </value>
                <value>
                    <fullName>IT Whitepapers</fullName>
                </value>
                <value>
                    <fullName>Madison Logic</fullName>
                </value>
                <value>
                    <fullName>MeritDirect</fullName>
                </value>
                <value>
                    <fullName>NetworkWorld</fullName>
                </value>
                <value>
                    <fullName>Oceanos</fullName>
                </value>
                <value>
                    <fullName>Prelytix</fullName>
                </value>
                <value>
                    <fullName>PureB2B</fullName>
                </value>
                <value>
                    <fullName>QuinStreet Enterprise</fullName>
                </value>
                <value>
                    <fullName>Redmond Magazine</fullName>
                </value>
                <value>
                    <fullName>Selling Simplified</fullName>
                </value>
                <value>
                    <fullName>Slashdot Media</fullName>
                </value>
                <value>
                    <fullName>Spiceworks</fullName>
                </value>
                <value>
                    <fullName>TCI Marketing</fullName>
                </value>
                <value>
                    <fullName>Tech Evaluation Centers</fullName>
                </value>
                <value>
                    <fullName>Technology Advice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bizible2__Bizible_Attribution_SyncType__c</fullName>
        <description>Choose which Campaign Members to include as Bizible Attribution Touchpoints</description>
        <inlineHelpText>Choose which Campaign Members to include as Bizible Attribution Touchpoints</inlineHelpText>
        <label>Enable Bizible Touchpoints</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Include all Campaign Members</fullName>
                </value>
                <value>
                    <fullName>Include only &quot;Responded&quot; Campaign Members</fullName>
                </value>
                <value>
                    <fullName>Exclude all Campaign Members</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bizible2__UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used internally by Bizible help track Campaigns</description>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Murphy</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>My_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <label>My Campaigns</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>bizible2__Update_Bizible_Attribution_Rule</fullName>
        <active>false</active>
        <description>As of version 6.0, this rule is deprecated.</description>
        <errorConditionFormula>False</errorConditionFormula>
        <errorMessage>Deprecated rule</errorMessage>
    </validationRules>
</CustomObject>